--- a/createx/index.html
+++ b/createx/index.html
@@ -78,7 +78,8 @@
                                     Enjoy studying with Createx Online Courses
                                 </h1>
                                 <div class="header__content-buttons">
-                                    <a class="header__content-btn button button--empty" href="#about"><span>About us</span>
+                                    <a class="header__content-btn button button--empty" href="#about"><span>About
+                                            us</span>
                                     </a>
                                     <a class="header__content-btn button" href="#courses">
                                         Explore courses</a>
@@ -180,7 +181,7 @@
                     </div>
                 </div>
             </section>
-            <section class="main_directions directions" >
+            <section class="main_directions directions">
                 <div class="container">
                     <div class="directions__inner">
                         <div class="directions__heading">
@@ -1283,8 +1284,10 @@
                         </div>
 
                         <div class="contact__map">
-                            <script type="text/javascript" charset="utf-8" async
-                                src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af9bc9aa6dd67dbc14e76ccc760e82caad939dc576e000e02d0181a8c0986f5c5&amp;width=705&amp;height=412&amp;lang=ru_RU&amp;scroll=true"></script>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20141.08520781045!2d-74.26279579542205!3d40.17975810987392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c17fd1b63b73e5%3A0xf83b556d5c7c71eb!2zUm95YWwgTG4sIEhvd2VsbCBUb3duc2hpcCwgTkogMDc3MzEsINCh0KjQkA!5e0!3m2!1sru!2sru!4v1704428237950!5m2!1sru!2sru"
+                                width="705" height="412" style="border:;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
 
                     </div>
@@ -1547,13 +1550,13 @@
                         <div class="footer__bottom-rights">
                             <p>© All rights reserved. Made with <span>by Createx Studio</span> </p>
 
-                           
+
                         </div>
                         <a href="#body">GO TO TOP</a>
                     </div>
                 </div>
-                  
-                </div>
+
+            </div>
 
         </footer>
     </div>
