--- a/createx/index.html
+++ b/createx/index.html
@@ -190,7 +190,7 @@
                                 <h2 class="heading__title">What do we teach</h2>
                             </div>
                         </div>
-                        <div class="directions__body">
+                        <div class="directions__body" id="marketing">
                             <ul class="directions__filter-box">
                                 <li class="directions__filter-item">
                                     <button class="directions__filter-btn directions__filter-btn--active" type="button"
@@ -1473,11 +1473,11 @@
                                     <li>
                                         <h2 class="test">SITE MAP</h2>
                                     </li>
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Courses</a></li>
-                                    <li><a href="#">Events</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Contacts</a></li>
+                                    <li><a href="#about">About Us</a></li>
+                                    <li><a href="#courses">Courses</a></li>
+                                    <li><a href="#team">Events</a></li>
+                                    <li><a href="#blog">Blog</a></li>
+                                    <li><a href="#contacts">Contacts</a></li>
                                 </ul>
                             </div>
 
@@ -1487,9 +1487,9 @@
                                     <li>
                                         <h2>COURSES</h2>
                                     </li>
-                                    <li><a href="#">Marketing</a></li>
-                                    <li><a href="#">Management</a></li>
-                                    <li><a href="#">HR & Recruting</a></li>
+                                    <li><a href="#marketing">Marketing</a></li>
+                                    <li><a href="#events">Management</a></li>
+                                    <li><a href="#events">HR & Recruting</a></li>
                                     <li><a href="#">Design</a></li>
                                     <li><a href="#">Development</a></li>
                                 </ul>
