--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body id="body">
     <div class="wrapper">
         <header class="header">
+            <a href="#" class="burger">
+                <span></span>
+            </a>
             <div class="header__top">
                 <div class="container">
                     <div class="header__top-inner">
