--- a/index.html
+++ b/index.html
@@ -1569,7 +1569,7 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/accordion.js"></script>
-    <script src="js/main.js"></script>
+    <script defer src="js/main.js"></script>
 </body>
 
 </html>
