--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body id="body">
     <div class="wrapper">
+        <div class="overlay"></div>
         <header class="header">
             <a href="#" class="burger">
                 <span></span>
