colse button added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="overlay"></div>
         <header class="header">
             <a href="#" class="burger">
-                <span></span>
+                <span class="burger--open"></span>
             </a>
             <div class="header__top">
                 <div class="container">
@@ -29,6 +29,7 @@
                             <img src="images/logo.svg" alt="Logo" />
                         </a>
                         <!--Это блок по бэм (логотип), он же дочерний для hedaer -->
+
                         <div class="header__nav">
                             <ul class="header__nav-list">
                                 <li class="header__nav-item">
