dots team slik added

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                             </div>
                         </div>
 
-
+                        <div class="team__dots"></div>
                     </div>
                 </div>
             </section>
