--- a/index.html
+++ b/index.html
@@ -863,7 +863,23 @@
 
                             <a href="">
 
-                                <img src="images/logos/logo-11.svg" alt="logo">
+                                <img src="images/logos/logo-1.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-8.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-9.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-6.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-5.svg" alt="logo">
                             </a>
                             <a href="#">
 
@@ -871,43 +887,27 @@
                             </a>
                             <a href="#">
 
-                                <img src="images/logos/logo-11.svg" alt="logo">
+                                <img src="images/logos/logo.svg" alt="logo">
                             </a>
                             <a href="#">
 
-                                <img src="images/logos/logo-11.svg" alt="logo">
+                                <img src="images/logos/logo-4.svg" alt="logo">
                             </a>
                             <a href="#">
 
-                                <img src="images/logos/logo-11.svg" alt="logo">
+                                <img src="images/logos/logo-2.svg" alt="logo">
                             </a>
                             <a href="#">
 
-                                <img src="images/logos/logo-11.svg" alt="logo">
+                                <img src="images/logos/logo-7.svg" alt="logo">
                             </a>
                             <a href="#">
 
-                                <img src="images/logos/logo-11.svg" alt="logo">
+                                <img src="images/logos/logo-1.svg" alt="logo">
                             </a>
                             <a href="#">
 
-                                <img src="images/logos/logo-11.svg" alt="logo">
-                            </a>
-                            <a href="#">
-
-                                <img src="images/logos/logo-11.svg" alt="logo">
-                            </a>
-                            <a href="#">
-
-                                <img src="images/logos/logo-11.svg" alt="logo">
-                            </a>
-                            <a href="#">
-
-                                <img src="images/logos/logo-11.svg" alt="logo">
-                            </a>
-                            <a href="#">
-
-                                <img src="images/logos/logo-11.svg" alt="logo">
+                                <img src="images/logos/logo-3.svg" alt="logo">
                             </a>
 
 
