--- a/index.html
+++ b/index.html
@@ -912,6 +912,8 @@
 
 
                         </div>
+                    </div>
+                </div>
             </section>
 
             <section class="main__program programm" id="courses">
@@ -1046,6 +1048,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </section>
 
 
@@ -1068,11 +1071,8 @@
                             <a href="#">
                                 <div class="blog__podcast">
                                     <div class="blog__content-image-box">
-                                        <img class="blog__image-content" src="images/blog/2.jpg" alt="">
-                                        <img class="blog__image-icon" src="images/icons/video.svg" alt="">
-
+                                        <img class="blog__image-content" src="images/blog/1.jpg" alt="">
                                     </div>
-
                                     <ul class="blog__captions">
                                         <li>Marketing</li>
                                         <li class="blog__captions-icon"><svg width="28" height="15" viewBox="0 0 28 15"
@@ -1084,7 +1084,6 @@
                                                     fill="#787A80" />
                                             </svg>
                                         </li>
-
                                         <li class="blog__captions-data">September 4, 2020</li>
                                         <li class="blog__captions-icon"><svg width="28" height="15" viewBox="0 0 28 15"
                                                 fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1101,7 +1100,6 @@
                                         </li>
                                         <li class="blog__captions-clock">36 min</li>
                                     </ul>
-
                                     <div class="blog__content-text">
                                         <p>What is traffic arbitrage and does it really make money?</p>
                                         <span>Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis
@@ -1116,9 +1114,7 @@
                             <a href="#">
                                 <div class="blog__podcast">
                                     <div class="blog__content-image-box">
-                                        <img class="blog__image-content" src="images/blog/3.jpg" alt="">
-                                        <img class="blog__image-icon" src="images/icons/article.svg" alt="">
-
+                                        <img class="blog__image-content" src="images/blog/2.jpg" alt="">
                                     </div>
                                     <ul class="blog__captions">
                                         <li>Management</li>
@@ -1162,9 +1158,7 @@
                             <a href="#">
                                 <div class="blog__podcast">
                                     <div class="blog__content-image-box">
-                                        <img class="blog__image-content" src="images/blog/1.jpg" alt="">
-                                        <img class="blog__image-icon" src="images/icons/podcast.svg" alt="">
-
+                                        <img class="blog__image-content" src="images/blog/3.jpg" alt="">
                                     </div>
                                     <ul class="blog__captions">
                                         <li>Design</li>
@@ -1177,10 +1171,9 @@
                                                     fill="#787A80" />
                                             </svg>
                                         </li>
-
                                         <li class="blog__captions-data">August 8, 2020</li>
-
                                     </ul>
+
                                     <div class="blog__content-text">
                                         <p>What is traffic arbitrage and does it really make money?</p>
                                         <span>Pharetra, ullamcorper iaculis viverra parturient sed id sed. Convallis
