--- a/index.html
+++ b/index.html
@@ -1239,6 +1239,7 @@
                   <a class="about__btn button" href="#"> Go to blog</a>
                 </div>
               </div>
+              
               <div class="blog__content">
                 <a href="#">
                   <div class="blog__podcast">
@@ -1350,7 +1351,7 @@
                         alt=""
                       />
                     </div>
-                    <ul class="blog__captions">
+                    <ul class="blog__captions blog__captions--design">
                       <li>Design</li>
                       <span></span>
                       <li class="blog__captions-icon">
@@ -1380,6 +1381,7 @@
                   </div>
                 </a>
               </div>
+            
             </div>
           </div>
         </section>
@@ -1783,7 +1785,7 @@
                 <div class="footer__site-map">
                   <ul class="footer__site-map-items">
                     <li>
-                      <h2 class="test">SITE MAP</h2>
+                      <h2>SITE MAP</h2>
                     </li>
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#courses">Courses</a></li>
