--- a/index.html
+++ b/index.html
@@ -1388,47 +1388,45 @@
               </ul>
             </div>
 
-            <div class="footer__site-map">
-              <ul class="footer__site-map-items">
+            <div class="footer__items">
+              <h2>SITE MAP</h2>
+
+              <ul class="footer__items-ul">
                 <li>
-                  <h2>SITE MAP</h2>
                 </li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#courses">Courses</a></li>
-                <li><a href="#team">Events</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contacts">Contacts</a></li>
+                <li class="footer__items-li"><a href="#about">About Us</a></li>
+                <li class="footer__items-li"><a href="#courses">Courses</a></li>
+                <li class="footer__items-li"><a href="#team">Events</a></li>
+                <li class="footer__items-li"><a href="#blog">Blog</a></li>
+                <li class="footer__items-li"><a href="#contacts">Contacts</a></li>
               </ul>
             </div>
 
-            <div class="footer__cources">
-              <ul class="footer__cources-items">
-                <li>
-                  <h2>COURSES</h2>
-                </li>
-                <li><a href="#marketing">Marketing</a></li>
-                <li><a href="#events">Management</a></li>
-                <li><a href="#events">HR & Recruting</a></li>
-                <li><a href="#">Design</a></li>
-                <li><a href="#">Development</a></li>
+            <div class="footer__items">
+              <h2>COURSES</h2>
+              <ul class="footer__items-ul">
+               
+                <li class="footer__items-li"><a href="#marketing">Marketing</a></li>
+                <li class="footer__items-li"><a href="#events">Management</a></li>
+                <li class="footer__items-li"><a href="#events">HR & Recruting</a></li>
+                <li class="footer__items-li"><a href="#">Design</a></li>
+                <li class="footer__items-li"><a href="#">Development</a></li>
               </ul>
             </div>
 
-            <div class="footer__contacts">
-              <ul class="footer__contacts-items">
-                <li>
-                  <h2>CONTACT US</h2>
-                </li>
-                <li>
+            <div class="footer__items">
+              <h2>CONTACT US</h2>
+              <ul class="footer__items-ul">                              
+                <li class="footer__items-li">
                   <a class="footer__contacts-item" href="tel:+74055550128"><svg width="16" height="16"
                       viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd"
                         d="M5.66683 1.94857C5.11454 1.94857 4.66683 2.39628 4.66683 2.94857V13.0527C4.66683 13.605 5.11454 14.0527 5.66683 14.0527H10.3335C10.8858 14.0527 11.3335 13.605 11.3335 13.0527V2.94857C11.3335 2.39628 10.8858 1.94857 10.3335 1.94857H10.2779L10.1155 2.3382C10.012 2.58661 9.76928 2.74842 9.50016 2.74842H6.50016C6.23105 2.74842 5.98832 2.58661 5.8848 2.3382L5.72242 1.94857H5.66683ZM3.3335 2.94857C3.3335 1.6599 4.37817 0.615234 5.66683 0.615234H10.3335C11.6222 0.615234 12.6668 1.6599 12.6668 2.94857V13.0527C12.6668 14.3414 11.6222 15.3861 10.3335 15.3861H5.66683C4.37816 15.3861 3.3335 14.3414 3.3335 13.0527V2.94857Z"
                         fill="white" />
                     </svg>
-                    ><span class="footer__contacts-icon">(405) 555-0128</span></a>
+                    <span class="footer__contacts-icon">(405) 555-0128</span></a>
                 </li>
-                <li>
+                <li class="footer__items-li">
                   <a class="footer__contacts-item" href="mailto:example@mail.ru"><svg width="16" height="16"
                       viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd"
