--- a/index.html
+++ b/index.html
@@ -1389,11 +1389,9 @@
             </div>
 
             <div class="footer__items">
-              <h2>SITE MAP</h2>
+              <h2 class="footer__top-title">SITE MAP</h2>
 
               <ul class="footer__items-ul">
-                <li>
-                </li>
                 <li class="footer__items-li"><a href="#about">About Us</a></li>
                 <li class="footer__items-li"><a href="#courses">Courses</a></li>
                 <li class="footer__items-li"><a href="#team">Events</a></li>
@@ -1403,7 +1401,7 @@
             </div>
 
             <div class="footer__items">
-              <h2>COURSES</h2>
+              <h2 class="footer__top-title">COURSES</h2>
               <ul class="footer__items-ul">
                
                 <li class="footer__items-li"><a href="#marketing">Marketing</a></li>
@@ -1415,7 +1413,7 @@
             </div>
 
             <div class="footer__items">
-              <h2>CONTACT US</h2>
+              <h2 class="footer__top-title">CONTACT US</h2>
               <ul class="footer__items-ul">                              
                 <li class="footer__items-li">
                   <a class="footer__contacts-item" href="tel:+74055550128"><svg width="16" height="16"
@@ -1462,15 +1460,16 @@
 
       <div class="footer__bottom">
         <div class="container">
-          <div class="footer__bottom-inner">
+          <div class="footer__bottom-inner"> 
             <div class="footer__bottom-rights">
               <p>
                 © All rights reserved. Made with
                 <span>by Createx Studio</span>
               </p>
             </div>
-            <a href="#body">GO TO TOP</a>
-          </div>
+            <a class="footer__bottom-link" href="#body">GO TO TOP</a>
+          
+        </div>
         </div>
       </div>
 
