--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           </div>
         </div>
       </section>
-      <section class="main_directions directions">
+      <section class="main__directions directions">
         <div class="container">
           <div class="directions__inner">
             <div class="directions__heading">
@@ -1478,7 +1478,7 @@
       </div>
 
 
-      <div class="test"></div>
+      
   </div>
 
   </footer>
